# counterfactual-reasoning

./: .gitignore  COMPLETION_REPORT.md  FINAL_SUMMARY.md  INDEX.md  INSTALL.md  MIGRATION.md  README.md  RESTRUCTURING_COMPLETE.md  SMAC_OPTIMIZATION_FIXES.md  STRUCTURE.md  Sampling_Experiment (2).ipynb  bootstrap_visualization.py  bugs.md  paper.fdb_latexmk  paper.fls  paper.md  paper.tex  pyproject.toml  references.bib  requirements.txt  setup.py  train_ppo_smac.py
.claude/: CLAUDE.md
docs/: CLAIM1_METRICS.md  CLAIM2_METRICS.md  COUNTERFACTUAL_ANALYZER_REFACTORING.md  COUNTERFACTUAL_COMPONENTS.md  MULTIDISCRETE_COUNTERFACTUAL.md  PAPER_CLAIMS.md  PAPER_STATUS.md  README_REGISTRY_SYSTEM.md  REGISTRY_GUIDE.md  explainability_consequence.md  frozen_lake_gymnasium_spec.md  mock_claim1_figures.py  mock_claim2_figures.py
examples/: compare_metrics_analysis.py  counterfactual_analysis_demo.ipynb  smac_counterfactual_demo.ipynb  smac_random_policy_demo.ipynb  smac_random_policy_demo.py  visualize_smac_timesteps.py
plans/: repo-restructure.md
src/counterfactual_rl/: __init__.py
src/counterfactual_rl/agents/: __init__.py  ppo_trainer.py
src/counterfactual_rl/analysis/: __init__.py  chess_counterfactual.py  counterfactual.py  metrics.py  multidiscrete_counterfactual.py  smax_counterfactual.py  smax_vectorized_counterfactual.py
src/counterfactual_rl/environments/: GARDNER_CHESS.md  __init__.py  base.py  examples.py  frozen_lake.py  registry.py  smac.py
src/counterfactual_rl/envs/: __init__.py  frozen_lake.py  smax.py
src/counterfactual_rl/policies/: __init__.py  policy_adapters.py
src/counterfactual_rl/simulations/: chess_baseline_analysis.py  frozen_lake_random_policy.py  frozen_lake_trained_policy.py  profile_output.prof  run_SMAX_analysis_random.sh  run_SMAX_vectorized_analysis.sh  run_chess_baseline_analysis.sh  run_smac_analysis_good_policy.sh  run_smac_analysis_random.sh  smac_random_policy.py  (+3 more)
tests/: __init__.py  test_consequence_buffer.py  test_frozen_lake_env.py  test_registry.py  test_state_manager.py
(+115 files in other folders)
